--- a/lab_09_web_sec_101/src/main/resources/static/csp/index.html
+++ b/lab_09_web_sec_101/src/main/resources/static/csp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Verify CSP</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
     <a href="/">Home</a><br>
